p1/mongo-express.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  containers:
  - name: mongo-express
    image: mongo-express
    ports:
    - containerPort: 8081
